Prevent tag overlaps

--- a/src/katex.less
+++ b/src/katex.less
@@ -241,6 +241,10 @@
         max-width: 0; // necessary for Safari
     }
 
+    .glue {
+        flex-grow: 1;
+    }
+
     .msupsub {
         text-align: left;
     }
@@ -627,21 +631,18 @@
         white-space: nowrap;
 
         > .katex-html {
-            display: block;
-            position: relative;
-
-            > .tag {
-                position: absolute;
-                right: 0;
-            }
+            display: -ms-inline-flexbox;
+            display: inline-flex;
+            -ms-flex-direction: row;
+            flex-direction: row;
+            width: 100%;
         }
     }
 }
 
 // Left-justified tags (default is right-justified)
 .katex-display.leqno > .katex > .katex-html > .tag {
-    left: 0;
-    right: auto;
+    order: -1;
 }
 
 // Flush-left display math
